# LatticeBoltzmannCuda

./: CMakeLists.txt  Dockerfile  LatticeBoltzmannCuda.cpp
render/: CMakeLists.txt
render/include/: CMakeLists.txt  Renderer.cuh  renderer.cuh
render/source/: CMakeLists.txt  Renderer.cu  renderer.cu
simulation/: CMakeLists.txt
simulation/include/: CMakeLists.txt  Constants.h  FlowCriterion.cuh  FlowSurface.h  Geometry.h  Lattice.h  LatticePoint.h  Model.h  Render.cuh  SimCalcFuncs.cuh  Utils.h
simulation/source/: Constants.cpp  FlowCriterion.cu  Geometry.cpp  Lattice.cpp  Model.cpp  Render.cu  SimCalcFuncs.cu  Utils.cpp
test/: CMakeLists.txt  CalculationsTest.cpp  CoordinatesTest.cpp  CudaTestHelper.cu  CudaTestHelper.cuh  GeometryTest.cpp  ModelTest.cpp  RenderTest.cpp
